--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = kop-utility
+name = kop-kennitala
 version = 0.0.1
 author = Mikael Máni
 author_email = mikaelmani@kopavogur.is
-description = A python utility package for kópavogur
+description = A python package for kennitala
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/kop-mikki/kop-kennitala
